# De-insight

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS_V2.md  De-insight.command  README.md  README.zh-TW.md  app.py  check_caption_in_db.py  check_style_tags.py  codex_client.py  focus.py  install.sh  knowledge_screen.py  llm_client.py  modals.py  model_registry.py  panels.py  paths.py  providers.py  pyproject.toml  settings.py  test_stability.py  tui.py  widgets.py
*TECH SPEC*/: deinsight_phase2_test_debug_prompt.txt  deinsight_phase2_test_debug_spec.md  deinsight_v2_codex_prompt.txt  deinsight_v2_codex_technical_spec.md
.claude/: launch.json
backend/: main.py  requirements.txt
config/: __init__.py  service.py  store_env.py
conversation/: store.py
core/: __init__.py  bridge_ranker.py  bridge_surfacing.py  compat.py  concept_mapper.py  query_classifier.py  retrieval_planner.py  retriever.py  schemas.py  thought_extractor.py
docs/: DEBUG_V02.md  DEINSIGHT_V035_TECH_SPEC.md  DEINSIGHT_V03_TECH_SPEC.md
embeddings/: __init__.py  backend.py  gguf_backend.py  gguf_installer.py  jina_backend.py  jina_v4.py  llama_server.py  local.py  openrouter_backend.py  service.py
frontend/: index.html  package-lock.json
interaction/: prompt_parser.py
memory/: store.py  thought_tracker.py  vectorstore.py
mixins/: __init__.py  chat.py  memory.py  project.py  protocol.py  rag.py  ui.py
modals/: __init__.py  delete_confirm.py  doc_reader.py  document_manage.py  exit_confirm.py  focus_import.py  health_dashboard.py  import_modal.py  insight_confirm.py  (+10 more)
(+168 files in other folders)
